tests/golden/fixtures/syntax-warn-bare-closing-brace/expected.err
Error: invalid syntax: unexpected '}'
   ╭─[ tests/golden/fixtures/syntax-warn-bare-closing-brace/input.k65:4:1 ]
   │
 4 │ }
   │ ┬  
   │ ╰── stray '}'
   │ 
   │ Help: the parser was looking for a top-level item (`func`, `data`, `var`, `const`, `segment`, `eval`, ...) and found `}` instead — usually this means an earlier `}` already closed the enclosing block; check brace balance from the matching `{` upwards
   │ 
   │ Note: Top-level K816 sources contain only declarations (`func`, `data`, `var`, `const`, `segment`, `eval` blocks); a bare `}` at file scope cannot close anything because nothing is open.
───╯
